Change realization section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="dist/css/main.css" media="none" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="dist/css/main.css?v=2.0.0">
 </head>
 
 <body>
@@ -194,88 +194,151 @@
 
             <div class="works__items clearfix">
 
-                <div class="works__item-container">
-                    <img src="dist/img/works/optopol.png" class="works__image" alt="">
+                <article class="work">
+                    <img src="dist/img/works/optopol.png" class="work__image" alt="">
 
-                    <div class="works__item-content">
-                        <h3 class="works__name">OPTOPOL</h3>
-                        <p class="works__subheading">Technologie:</p>
-                        <p class="works__tech-list">
-                            HTML5, CSS3, SASS, JQuery, ScrollMagic, GSAP, BxSlider, packery
-                        </p>
-                        <p class="works__subheading">Online</p>
-                        <a href="http://optopol.com/" class="works__link" target="_blank">optopol.com</a>
+                    <a class="work__content" href="http://optopol.com/">
+                        <h3 class="work__name">OPTOPOL</h3>
+                        <p class="work__subheading">Technologie:</p>
+                        <ul class="work__tech-list">
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>SASS</li>
+                            <li>Jquery</li>
+                            <li>ScrollMagic</li>
+                            <li>GSAP</li>
+                            <li>BxSlider</li>
+                            <li>Packery</li>
+                        </ul>
+                    </a>
+                </article>
 
-                    </div>
-                </div>
+                <article class="work">
+                    <img src="dist/img/works/inwave.png" class="work__image" alt="">
 
-                <div class="works__item-container reverse">
-                    <img src="dist/img/works/inwave.png" class="works__image" alt="">
+                    <a class="work__content" href="http://inwave.pl">
+                        <h3 class="work__name">INWAVE</h3>
+                        <p class="work__subheading">Technologie:</p>
+                        <ul class="work__tech-list">
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>SASS</li>
+                            <li>Bootstrap</li>
+                            <li>Jquery</li>
+                            <li>Magnific Popup</li>
+                            <li>Flickity</li>
+                            <li>AOS</li>
+                        </ul>
+                    </a>
+                </article>
 
-                    <div class="works__item-content">
-                        <h3 class="works__name">INWAVE</h3>
-                        <p class="works__subheading">Technologie:</p>
-                        <p class="works__tech-list">
-                            HTML5, CSS3, SASS, Bootstrap, Jquery, Magnific Popup, Flickity, AOS,
-                        </p>
-                        <p class="works__subheading">Online</p>
-                        <a href="http://inwave.pl" class="works__link" target="_blank">inwave.pl</a>
-                    </div>
-                </div>
+                <article class="work">
+                    <img src="dist/img/works/fujitsu.png" class="work__image" alt="">
+                    <a class="work__content" href="http://fqs.pl">
+                        <h3 class="work__name">FQS Poland</h3>
+                        <p class="work__subheading">Technologie:</p>
+                        <ul class="work__tech-list">
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>SASS</li>
+                            <li>Bootstrap</li>
+                            <li>Jquery</li>
+                            <li>ScrollMagic</li>
+                        </ul>
+                    </a>
+                </article>
 
-                <div class="works__item-container">
-                    <img src="dist/img/works/fujitsu.png" class="works__image" alt="">
-                    <div class="works__item-content">
-                        <h3 class="works__name">FQS Poland</h3>
-                        <p class="works__subheading">Technologie:</p>
-                        <p class="works__tech-list">
-                            HTML5, CSS3, SASS, Bootstrap, Jquery
-                        </p>
-                        <p class="works__subheading">Online</p>
-                        <a href="http://fqs.pl" class="works__link" target="_blank">fqs.pl</a>
-                    </div>
-                </div>
+                <article class="work">
+                    <img src="dist/img/works/stodola.png" class="work__image" alt="">
+                    <a class="work__content" href="http://nowoczesnastodola.pl">
+                        <h3 class="work__name">NOWOCZESNA STODOLA</h3>
+                        <p class="work__subheading">Technologie:</p>
+                        <ul class="work__tech-list">
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>SASS</li>
+                            <li>Bootstrap</li>
+                            <li>Jquery</li>
+                            <li>Magnific Popup</li>
+                            <li>Animate.css</li>
+                            <li>ScrollMagic</li>
+                            <li>GSAP</li>
+                            <li>Waypoints.js</li>
+                        </ul>
+                    </a>
+                </article>
 
-                <div class="works__item-container reverse">
-                    <img src="dist/img/works/stodola.png" class="works__image" alt="">
-                    <div class="works__item-content">
-                        <h3 class="works__name">NOWOCZESNA STODOLA</h3>
-                        <p class="works__subheading">Technologie:</p>
-                        <p class="works__tech-list">
-                            HTML5, CSS3, SASS, Bootstrap, Jquery, Magnific Popup, Animate.css, ScrollMagic, GSAP, Waypoints.js,
-                        </p>
-                        <p class="works__subheading">Online</p>
-                        <a href="http://nowoczesnastodola.pl" class="works__link" target="_blank">nowoczesnastodola.pl</a>
-                    </div>
-                </div>
+                <article class="work">
+                    <img src="dist/img/works/onwelo.png" class="work__image" alt="">
+                    <a class="work__content" href="http://onwelo.com">
+                        <h3 class="work__name">ONWELO</h3>
+                        <p class="work__subheading">Technologie:</p>
+                        <ul class="work__tech-list">
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>SASS</li>
+                            <li>Bootstrap</li>
+                            <li>Jquery</li>
+                            <li>Flickity</li>
+                            <li>Magnific Popup</li>
+                            <li>Animate.css</li>
+                            <li>Waypoints.js</li>
+                            <li>countUp.js</li>
+                        </ul>
+                    </a>
+                </article>
 
-                <div class="works__item-container">
-                    <img src="dist/img/works/onwelo.png" class="works__image" alt="">
-                    <div class="works__item-content">
-                        <h3 class="works__name">ONWELO</h3>
-                        <p class="works__subheading">Technologie:</p>
-                        <p class="works__tech-list">
-                            HTML5, CSS3, SASS, Bootstrap, Jquery, Flickity, Magnific Popup, Animate.css, Waypoints.js, countUp.js
-                        </p>
-                        <p class="works__subheading">Online</p>
-                        <a href="http://onwelo.com" class="works__link" target="_blank">onwelo.com</a>
-                    </div>
-                </div>
+                <article class="work">
+                    <img src="dist/img/works/eris-conceptstore.png" class="work__image" alt="">
+                    <a class="work__content" href="http://drirenaeris.com/conceptstore">
+                        <h3 class="work__name">Dr Irena Eris - Concept Store</h3>
+                        <p class="work__subheading">Technologie:</p>
+                        <ul class="work__tech-list">
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>SASS</li>
+                            <li>Bootstrap</li>
+                            <li>Jquery</li>
+                            <li>Animate.css</li>
+                            <li>Waypoints.js</li>
+                        </ul>
+                    </a>
+                </article>
 
-                <div class="works__item-container reverse">
-                    <img src="dist/img/works/eris-conceptstore.png" class="works__image" alt="">
-                    <div class="works__item-content">
-                        <h3 class="works__name">Dr Irena Eris - Concept Store</h3>
-                        <p class="works__subheading">Technologie:</p>
-                        <p class="works__tech-list">
-                            HTML5, CSS3, SASS, Bootstrap, Jquery, Animate.css, Waypoints.js
-                        </p>
-                        <p class="works__subheading">Online</p>
-                        <a href="http://drirenaeris.com/conceptstore" class="works__link" target="_blank">drirenaeris.com/conceptstore</a>
-                    </div>
-                </div>
+                <article class="work">
+                        <img src="dist/img/works/cpr.png" class="work__image" alt="">
+                        <a class="work__content" href="http://cpr.com.pl">
+                            <h3 class="work__name">CZTERY PORY ROKU</h3>
+                            <p class="work__subheading">Technologie:</p>
+                            <ul class="work__tech-list">
+                                <li>HTML5</li>
+                                <li>CSS3</li>
+                                <li>SASS</li>
+                                <li>Jquery</li>
+                                <li>Flickity</li>
+                                <li>Animate.css</li>
+                                <li>Waypoints.js</li>
+                            </ul>
+                        </a>
+                    </article>
 
-
+                    <article class="work">
+                            <img src="dist/img/works/edukacja.png" class="work__image" alt="">
+                            <a class="work__content" href="http://edukacja.drirenaeris.com">
+                                <h3 class="work__name">EDUKACJA DR IRENA ERIS</h3>
+                                <p class="work__subheading">Technologie:</p>
+                                <ul class="work__tech-list">
+                                    <li>HTML5</li>
+                                    <li>CSS3</li>
+                                    <li>SASS</li>
+                                    <li>Jquery</li>
+                                    <li>Flickity</li>
+                                    <li>Magnific Popup</li>
+                                    <li>Animate.css</li>
+                                    <li>Waypoints.js</li>
+                                </ul>
+                            </a>
+                        </article>
             </div>
         </div>
     </section>
